--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <style>
-        #id1 {width:50%;}
+        #id1 {width:50%;
+            display:block;
+            margin:auto;}
     </style>
 
   </head>
