Added text-align for class special

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         #id1 {width:50%;
             display:block;
             margin:auto;}
+
+        .special { text-align: center;}
     </style>
 
   </head>
