Styled all p elements as color Navy

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             margin:auto;}
 
         .special { text-align: center;}
+
+        p {
+        color: navy;
+          }
     </style>
 
   </head>
