add css activity

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         .special { text-align: center;}
 
         p {
-        color: navy;
-          }
+        color: navy;}
     </style>
 
   </head>
