corrected image size

--- a/dom_manipulation_basics.html
+++ b/dom_manipulation_basics.html
@@ -55,8 +55,8 @@
       //5
       //Set the width and height properties of the image element to 25%
 
-      // document.getElementById("img").width = "25%"
-      // document.getElementById("img").height = "25%"
+      document.querySelector("#img1").setAttribute("width","25%")
+      document.querySelector("#img1").setAttribute("height","25%")
 
       //6
       //Remove div3
