corrected cloning error

--- a/dom_manipulation_basics.html
+++ b/dom_manipulation_basics.html
@@ -105,7 +105,7 @@
 
       //13
       //Create a clone of the image element
-      let imga = document.getElementsByTagName("img")
+      let imga = document.querySelector("#img1")
       let img2 = imga.cloneNode(true);
 
       //div.after(div2);
