updated //2 from style.backgroundColor to style.color

--- a/dom_manipulation_basics.html
+++ b/dom_manipulation_basics.html
@@ -37,7 +37,7 @@
       //2
       //Set the color property for div1 to be #D50032
 
-      document.getElementById("div1").style.backgroundColor = "#D50032"
+      document.getElementById("div1").style.color = "#D50032"
 
       //3
       //Add the class big to div1
