--- a/lab9.html
+++ b/lab9.html
@@ -53,6 +53,13 @@
               "eye_distance": 300,
                "offset_horizontal": 150,
                "offset_vertical": 100
+              },
+              {
+              "file": "images/blue-glass.png",
+              "type": "eyewear",
+              "eye_distance": 300,
+               "offset_horizontal": 150,
+               "offset_vertical": 100
               }
 
           ];
