--- a/lab9.html
+++ b/lab9.html
@@ -48,11 +48,11 @@
                "offset_vertical": 100
               },
               {
-              "file": "images/glasses.png",
+              "file": "images/purple-glass.png",
               "type": "eyewear",
-              "eye_distance": 300,
-               "offset_horizontal": 150,
-               "offset_vertical": 100
+              "eye_distance": 310,
+               "offset_horizontal": 300,
+               "offset_vertical": 200
               },
               {
               "file": "images/blue-glass.png",
