--- a/lab9.html
+++ b/lab9.html
@@ -55,11 +55,11 @@
                "offset_vertical": 200
               },
               {
-              "file": "images/blue-glass.png",
+              "file": "images/funny.png",
               "type": "eyewear",
-              "eye_distance": 300,
-               "offset_horizontal": 150,
-               "offset_vertical": 100
+              "eye_distance": 350,
+               "offset_horizontal": 350,
+               "offset_vertical": 250
               }
 
           ];
