--- a/locationAwareMap.html
+++ b/locationAwareMap.html
@@ -44,7 +44,7 @@
             fillColor: "#ff7d7d",
             map,
             center: loc,
-            radius: 9,
+            radius: 3.5,
           })
 
         })
@@ -155,8 +155,8 @@
  
    <div id="map"><h1>Hello, world!</h1>
    </div>
-
-   <ul id="loc"></ul>
+   <div>
+   <ul id="loc"></ul></div>
 
        <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZ3JlKCAfq3IFs7n4W6jYupLPnQFneyho&callback=initMap&libraries=&v=weekly"
