--- a/locationAwareMap.html
+++ b/locationAwareMap.html
@@ -25,7 +25,7 @@
       </style>
       <script>
 
-      function watchPosition(){
+      function watchPos(){
       
       if('geolocation' in navigator){
         /* geolocation is available */
@@ -145,7 +145,7 @@
         })
 
         })
-        watchPosition(map);
+        watchPos();
       }
       </script>
     
