--- a/locationAwareMap.html
+++ b/locationAwareMap.html
@@ -31,6 +31,7 @@
 
           const drawCirc = new google.maps.Circle({
             fillColor: "#ff7d7d",
+            fillOpacity: 0.45,
             map,
             center: {lat: p.coords.latitude, lng: p.coords.longitude},
             radius: 3.5,
