--- a/lab13/index.html
+++ b/lab13/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <!-- <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
     <script>
-      window.OneSignal = window.OneSignal || [];
-      OneSignal.push(function() {
-        OneSignal.init({
-          appId: "31e420bc-0a8a-47be-b99f-1bb3855d5b75",
-        });
+    window.OneSignal = window.OneSignal || [];
+    OneSignal.push(function() {
+      OneSignal.init({
+        appId: "d7f82ef7-59ba-4915-bb54-0cc1c1e287d9",
       });
-    </script> -->
+    });
+    </script>
 
   </head>
   <body>
