--- a/pushNotifications.html
+++ b/pushNotifications.html
@@ -20,7 +20,7 @@
     <script>
 
       const registerServiceWorker = () =>  {
-          return navigator.serviceWorker.register('./sw.js', {scope: './'})
+          return navigator.serviceWorker.register('./sw.js', {scope: '/lab13'})
           .then(function(registration) {
             console.log('Service worker successfully registered.', registration);
             return registration;
