--- a/pushNotifications.html
+++ b/pushNotifications.html
@@ -17,6 +17,8 @@
   </head>
   <body>
     <h1>Lab 13</h1>
+    <h6> Currently issue with OneSignal Scope as it won't go through with saummays.github.io and I can't add my folder along with root site</h6>
+    <h6> Normal push works ! </h6>
     <script>
 
       const registerServiceWorker = () =>  {
